# httpemojicodes

./: .gitignore  LICENSE  README.md  mkdocs.yml  netlify.toml  pyproject.toml
httpemojicodes/: emojicodes.json  plugin.py
overrides/: 404.html
src/: .pages  _redirects  contributing.md  index.md
src/api/: index.md
src/stylesheets/: extra.css
