[tool.poetry]
name = "httpemojicodes"
version = "0.1.0"
description = "HTTP Status Codes as Emoji :fire:"
authors = ["Sean Stewart <sean_stewart@me.com>"]
license = "MIT"

[tool.poetry.plugins."mkdocs.plugins"]
emojicodes = 'httpemojicodes.plugin:EmojiCodesPlugin'

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"
mkdocs-material = "^5.2.3"
pymdown-extensions = "^7.1"
mkdocs-awesome-pages-plugin = "^2.2.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
inflection = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
